# NovaFund

./: .gitignore  README.md
backend/: package-lock.json  (+1 more)
contracts/: CONTRIBUTING.md  Cargo.toml  README.md
contracts/amm-liquidity-pools/: Cargo.toml  README.md
contracts/amm-liquidity-pools/src/: lib.rs  optimizations.rs  rewards.rs  tests.rs  tests_integration.rs
contracts/cross-chain-bridge/src/: lib.rs  storage.rs  tests.rs
contracts/cross-chain-bridge/test_snapshots/tests/: test_deposit.1.json  test_deposit_duplicate_transaction.1.json  test_deposit_paused_bridge.1.json  test_get_transaction_count.1.json  test_wrapped_asset_total_tracking.1.json
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  storage.rs  tests.rs
contracts/escrow/test_snapshots/tests/: test_initialize_escrow.1.json
contracts/governance/src/: lib.rs  tests.rs
contracts/governance/test_snapshots/tests/: test_governance_flow.1.json
contracts/identity/src/: lib.rs  test.rs
contracts/identity/test_snapshots/test/: test_verification_flow.1.json
contracts/insurance-pool/src/: lib.rs
contracts/multi-party-payment/src/: lib.rs  tests.rs
contracts/multi-party-payment/test_snapshots/tests/: test_multi_party_payment_flow.1.json
contracts/oracle-network/: Cargo.toml
contracts/oracle-network/src/: lib.rs
contracts/oracle-network/test_snapshots/tests/: test_basic_flow.1.json
contracts/profit-distribution/src/: lib.rs  storage.rs  tests.rs  types.rs
contracts/project-launch/: Cargo.toml  REFUND_MECHANISM.md
contracts/project-launch/src/: cross_chain_integration_test.rs  lib.rs
contracts/reputation/src/: lib.rs
contracts/shared/src/: constants.rs  errors.rs  events.rs  lib.rs  types.rs
contracts/subscription-pool/src/: lib.rs  test.rs
(+161 files in other folders)
