[package]
name = "oracle-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

