[package]
name = "project-launch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
